Add a command-line tool as wrapper for add-to-repo functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://github.com/hojin-koh/Ixal"
 "Bug Tracker" = "https://github.com/hojin-koh/Ixal/issues"
+
+[project.scripts]
+Ixal = "Ixal.main:main"
